<resources>
    <string name="app_name">牛逼立体</string>
    <string name="action_settings">Settings</string>
    <array name="menus">
        <item>邓名侨</item>
        <item>刘天喜</item>
        <item>其黄石</item>
        <item>蔡宏远</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="traderName">traderName</string>
    <string name="departName">deperName</string>
    <string name="accType">accType</string>
    <string name="userAcc">userAcc</string>
    <string name="userPWD">userPWD</string>
    <string name="commPWD">commPWD</string>
    <string name="ycUserAcc">ycUserAcc</string>
    <string name="saveUserAcc">saveUserAcc</string>
</resources>
